# Long-Running-Coding-Agent

./: .coverage  .gitignore  README.md  pyproject.toml
configs/: api_v051_completion_only.yaml  api_v051_contract.yaml  api_v051_contract_generated.yaml  api_v051_legacy_command.yaml  baseline.yaml  context_budget_exhausted.yaml  context_deterministic_prune.yaml  context_full_history.yaml  context_recent_window.yaml  context_structured_reset.yaml  contract_plus_generated_tests.yaml  contract_verification.yaml  fake.yaml  full_system.yaml  knowledge_disabled.yaml  knowledge_memory_skill.yaml  knowledge_raw_episode.yaml  knowledge_reflection.yaml  knowledge_verified_memory.yaml  legacy_command.yaml  planning_adaptive.yaml  planning_adaptive_real.yaml  planning_adaptive_search.yaml  planning_adaptive_search_real.yaml  planning_static.yaml  planning_static_fast.yaml  planning_static_glm47_10min.yaml  planning_static_glm47_30min.yaml  planning_static_one_session.yaml  planning_static_real.yaml  verification_disabled.yaml
evals/: __init__.py
scripts/: context_preflight.sh  replay_skill_candidate.py  run_context_formal.sh  run_full_system_demo.sh  validate_experience_pilot.py  validate_project_run.py  validate_task_service_result.py
tests/: test_agent_loop.py  test_bash.py  test_bash_tool.py  test_cli.py  test_config.py  test_context_budget.py  test_context_buffer.py  test_context_probe_activation_check.py  test_context_probe_cli.py  test_context_probe_evaluator.py  test_context_probe_executor.py  test_context_probe_generator.py  test_context_probe_modes.py  (+80 more)
(+230 files in other folders)
